--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
-    "prepare": "husky install"
+      "prepare": "husky install",
+      "dev" : "nodemon listen.js"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,17 @@
   },
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
+    "husky": "^7.0.0",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
+    "nodemon": "^2.0.20",
     "pg-format": "^1.0.4",
-    "husky": "^7.0.0"
+    "supertest": "^6.3.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "pg": "^8.7.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "pg": "^8.8.0"
   },
   "jest": {
     "setupFilesAfterEnv": [
