added jest-sorted for ticket 8 /api/articles to check sorted by date descending order

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
-      "prepare": "husky install",
-      "dev" : "nodemon listen.js"
+    "prepare": "husky install",
+    "dev": "nodemon listen.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.14",
     "nodemon": "^2.0.20",
     "pg-format": "^1.0.4",
     "supertest": "^6.3.0"
@@ -36,7 +37,8 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+        "jest-extended/all" ,
+        "jest-sorted"
     ]
   }
 }
