--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "setup-dbs": "psql -f ./db/setup.sql",
-    "seed": "node ./db/seeds/run-seed.js",
+      "seed": "node ./db/seeds/run-seed.js",
+      "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
     "test": "jest",
     "prepare": "husky install",
-    "dev": "nodemon listen.js"
+      "dev": "nodemon listen.js",
+      "start": "node listen.js"
   },
   "repository": {
     "type": "git",
