--- a/package.json
+++ b/package.json
@@ -1,46 +1,48 @@
 {
-  "name": "be-nc-news",
-  "version": "1.0.0",
-  "description": "bc-nc-news",
-  "main": "index.js",
-  "scripts": {
-    "setup-dbs": "psql -f ./db/setup.sql",
-    "seed": "node ./db/seeds/run-seed.js",
-    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
-    "test": "jest",
-    "prepare": "husky install",
-    "dev": "nodemon listen.js",
-    "start": "node listen.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/northcoders/be-nc-news.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/northcoders/be-nc-news/issues"
-  },
-  "homepage": "https://github.com/northcoders/be-nc-news#readme",
-  "devDependencies": {
-    "husky": "^7.0.0",
-    "jest": "^27.5.1",
-    "jest-extended": "^2.0.0",
-    "jest-sorted": "^1.0.14",
-    "nodemon": "^2.0.20",
-    "pg-format": "^1.0.4",
-    "supertest": "^6.3.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "pg": "^8.8.0"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "jest-extended/all",
-      "jest-sorted"
-    ]
-  }
+    "name": "be-nc-news",
+    "version": "1.0.0",
+    "description": "bc-nc-news",
+    "main": "index.js",
+    "scripts": {
+        "setup-dbs": "psql -f ./db/setup.sql",
+        "seed": "node ./db/seeds/run-seed.js",
+        "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed",
+        "test": "jest",
+        "prepare": "husky install",
+        "dev": "nodemon --inspect listen.js",
+        "start": "node listen.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/northcoders/be-nc-news.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/northcoders/be-nc-news/issues"
+    },
+    "homepage": "https://github.com/northcoders/be-nc-news#readme",
+    "devDependencies": {
+        "eslint": "^8.25.0",
+        "eslint-config-google": "^0.14.0",
+        "husky": "^7.0.0",
+        "jest": "^27.5.1",
+        "jest-extended": "^2.0.0",
+        "jest-sorted": "^1.0.14",
+        "nodemon": "^2.0.20",
+        "pg-format": "^1.0.4",
+        "supertest": "^6.3.0"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "pg": "^8.8.0"
+    },
+    "jest": {
+        "setupFilesAfterEnv": [
+            "jest-extended/all",
+            "jest-sorted"
+        ]
+    }
 }
